--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ custom_js:
   <ul>
     <li class="sub-parent">DATA COLLECTIONS</li>
 <!--      <li><a href="/chaise/record/#2/Common:Collection/RID=17-3ZHJ">Featured Image Annotations</a></li> -->
-    <li><a href="/chaise/recordset/#2/Common:Collection@sort(RID)">All Data Collections</a></li>
+    <li class="info-label"><a class="tooltiplink" href="/chaise/recordset/#2/Common:Collection/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaalAG3ZyyIEtGA+jQioMfNLQEAzANY4AniAC6AX1YAlAJIARZaywALFL1xJKARQC0AZgDSAVgAsylaqA@sort(RMT::desc::,RID)">Data Collections <i class="fas fa-info-circle" aria-hidden="true"></i><span>Customized collections of datasets, usually to collect data within a publication.</span></a></li>
   </ul>
 </div>
 <div class="col-md-4">
@@ -276,7 +276,7 @@ custom_js:
     <li><a href="/chaise/recordset/#2/Gene_Expression:Specimen/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAcRwhwH0BRADwAcMckkBLFCEADQgAyqxxZuAW1r0AglzABPegBVFY+gDMA1jkUgAugF8hAJQCSAEUNCsACxTdcSSgEYAbAFp3l2Y0NGxkA@sort(RCT::desc::,Stage_Ordinal,RID)">NanoCT</a></li>
   </ul>
   <ul>
-    <li class="sub-parent">OMICS</li>
+    <li class="sub-parent info-label">OMICS DATA  <a class="tooltiplink" href=""><i class="fas fa-info-circle" aria-hidden="true"></i><span>Describes studies of omics data, organized by Experiment and Replicate records.</span></a></li>
     <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAigC0AJoAUgAaAOr6BoZAA@sort(RMT::desc::,RID)">mRNA-Seq</a></li>
     <li><a href="/chaise/recordset/#2/RNASeq:Study/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JAEsIAjdafEAJQDkBBAZRwEcQAaEAUQA8AHHDIQC2OCABcA+gzFooATwlUAkgBEJAMwDWOOSAC6AXzah0YsmgoJq9Jqw49+gkeIkOBw0ZIAqc-hu26hhzKKvocWAAWKIS4SJQAjABsALQAigDSNF7sIKnJAJoAUvkATPoGhkA@sort(RMT::desc::,RID)">scRNA-Seq/snRNA-Seq</a></li>
     <li><a href="/chaise/recordset/#2/Microarray:Sample@sort(RID)">Microarray</a></li>
@@ -292,7 +292,7 @@ custom_js:
     <li><a href="/resources/cell-lines/">Request iPSC Cell Lines</a></li>
     <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)">Transgenic Mouse Strains</a></li>
     <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)">Protocols</a></li>
-    <li><a href="/resources/functional-assays/">Functional Assays Handbook</a></li>
+    <li><a class="tooltiplink" href="/resources/functional-assays/">Functional Assays Handbook <i class="fas fa-info-circle" aria-hidden="true"></i><span>Functional assays with a current focus on physiological assays which link to related protocols.</span></a></li>
     <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABYWIW46cA2Neo1AA@sort(Year::desc::,Month::desc::,RID::desc::)?pcid=navbar&ppid=1qns20zx1wfw2gvf260c2htn">Publications</a></li>
   </ul>
 </div>
