fixing broken link

--- a/tutorials/urogenital-dev/urinary-system/index.html
+++ b/tutorials/urogenital-dev/urinary-system/index.html
@@ -293,7 +293,7 @@ redirect_from:
     <p><u>TS26</u> (about 18 dpc): Within the <strong>renal cortex</strong>, the region subjacent to the <strong>capsule</strong> contains all components of the excretory system, including large numbers of <strong>glomerular tufts</strong> and the associated <strong>proximal </strong>and<strong> distal  tubules </strong>(although these may occasionally be seen at earlier stages of development). The associated ascending and descending components of the <strong>loops of Henle</strong>, also termed the <strong>immature loops of Henle</strong> at this stage, may also be seen within the <strong>renal medulla</strong>. This region is now seen to contain considerably less undifferentiated mesenchyme tissue than formerly appeared to be the case. All of the components of the drainage system are now present and readily recognised, including the renal<strong> pelvis</strong> and the <strong>collecting tubules</strong>. They also now appear to possess a distinct endothelial lining. The <strong>ureter</strong> is also clearly seen, although readily recognised from about TS21. At all stages, the <strong>ureters </strong>are surrounded by a substantial amount of mesenchyme tissue.</p>
     <p align="right"></p>
     <p>&nbsp;</p>
-    <p align="right"><a href="reproductive-system/">Development of the Murine Reproductive System &gt;&gt; </a></p>
+    <p align="right"><a href="../reproductive-system/">Development of the Murine Reproductive System &gt;&gt; </a></p>
     <p>&nbsp;</p></div>
 
 <script type="text/javascript">
