change order - add colorbox assets

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: home
 title: ATLAS-D2K - Transforming Data into Knowledge
+custom_css:
+  - colorbox
 custom_js:
   - home-stat-queries
+  - jquery.colorbox
 ---
 
 <div class="row homeBanner">
