slight reformat of shortcuts links

--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@ custom_js:
 
 
 <div class="row" id="shortcuts">
-<h2>Browse these shortcuts for GUDMAP and RBK data</h2>
+<h2>Browse these shortcuts for GUDMAP and RBK data<br/>
+<small>Available Species: Human, Mouse and Canine</small></h2>
 <div class="col-md-12">
   <div class="shortcuts">
 <!--
@@ -255,7 +256,6 @@ custom_js:
 <div class="row shortcut-links">
 <div class="col-md-4">
   <ul>
-    <li class="sub-parent">Available Species: Human, Mouse and Canine</li>
     <li class="sub-parent">SEARCH BY...</li>
     <li><a href="/chaise/recordset/#2/Common:Gene">Gene</a></li>
     <li><a href="/chaise/recordset/#2/Vocabulary:Anatomy/">Anatomy: Facet Search</a></li>
@@ -298,11 +298,11 @@ custom_js:
 <div class="col-md-4">
   <ul>
     <li class="sub-parent">LAB RESOURCES & TOOLS</li>
-    <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)">Antibody Validation</a></li>
     <li><a href="/resources/cell-lines/">Request iPSC Cell Lines</a></li>
-    <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)">Transgenic Mouse Strains</a></li>
     <li><a href="/chaise/recordset/#2/Protocol:Protocol@sort(RMT::desc::,RID)">Protocols</a></li>
     <li><a class="tooltiplink" href="/resources/functional-assays/">Functional Assays Handbook <i class="fas fa-info-circle" aria-hidden="true"></i><span>Functional assays with a current focus on physiological assays which link to related protocols.</span></a></li>
+    <li><a href="/chaise/recordset/#2/Antibody:Antibody_Tests@sort(RID)">Antibody Validation</a></li>
+    <li><a href="/chaise/recordset/#2/Cell_Line:Mouse_Strain@sort(ID)">Transgenic Mouse Strains</a></li>
     <li><a href="/chaise/recordset/#2/Common:Publication/*::facets::N4IghgdgJiBcDaoDOB7ArgJwMYFM6JHQBcAjdafEAYRQFtaUIQAaEABTRIBsBLLMIj0YB9GhFQZBaWsIBmAaxwBPEAF0AvqwBKASQAia1lgAWKPjiSUAigFoAzAGkArABYWIW46cA2Neo1AA@sort(Year::desc::,Month::desc::,RID::desc::)?pcid=navbar&ppid=1qns20zx1wfw2gvf260c2htn">Publications</a></li>
   </ul>
 </div>
